# ChangeLog for media-plugins/gmpc-last-fm
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-plugins/gmpc-last-fm/ChangeLog,v 1.16 2011/02/26 12:14:07 xmw Exp $

  26 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-last-fm-0.20.0.ebuild:
  sparc dropping keywords (bug 325621)

  25 Feb 2011; Michael Weber <xmw@gentoo.org> gmpc-last-fm-0.20.0.ebuild:
  Added ~sparc (bug 325621)

  20 Feb 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  gmpc-last-fm-0.20.0.ebuild:
  x86 stable wrt bug #325621

  20 Feb 2011; Kacper Kowalik <xarthisius@gentoo.org>
  gmpc-last-fm-0.20.0.ebuild:
  ppc stable wrt #325621

  17 Feb 2011; Markos Chandras <hwoarang@gentoo.org>
  gmpc-last-fm-0.20.0.ebuild:
  Stable on amd64 wrt bug #325621

  16 Feb 2011; <angelos@gentoo.org> gmpc-last-fm-0.18.0.ebuild,
  gmpc-last-fm-0.19.0.ebuild, gmpc-last-fm-0.20.0.ebuild:
  Fixed gtk+[jpeg] dependency (bug #354279)

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> gmpc-last-fm-0.18.0.ebuild,
  gmpc-last-fm-0.19.0.ebuild, gmpc-last-fm-0.20.0.ebuild:
  Drop sparc keywords

*gmpc-last-fm-0.20.0 (25 May 2010)

  25 May 2010; Christoph Mende <angelos@gentoo.org>
  +gmpc-last-fm-0.20.0.ebuild:
  Version bump

*gmpc-last-fm-0.19.0 (12 Nov 2009)

  12 Nov 2009; Christoph Mende <angelos@gentoo.org>
  +gmpc-last-fm-0.19.0.ebuild:
  Version bump (bug 288309)

  09 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  gmpc-last-fm-0.18.0.ebuild:
  stable x86, bug 272337

  06 Jun 2009; nixnut <nixnut@gentoo.org> gmpc-last-fm-0.18.0.ebuild:
  ppc stable #272337

  03 Jun 2009; Thomas Anderson <gentoofan23@gentoo.org>
  gmpc-last-fm-0.18.0.ebuild:
  stable amd64, bug 272337

  03 Jun 2009; Ferris McCormick <fmccor@gentoo.org>
  gmpc-last-fm-0.18.0.ebuild:
  Sparc stable, Bug #272337.

  20 Mar 2009; Brent Baude <ranger@gentoo.org> gmpc-last-fm-0.17.0.ebuild:
  Marking gmpc-last-fm-0.17.0 ppc stable for bug 259793
